// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BrevoContactNotifyPipe batchUsersDeleted should call deleteContact() for each user 1`] = `
Array [
  Array [
    "test@datasubvention.gouv.fr",
  ],
  Array [
    "test2@datasubvention.gouv.fr",
  ],
]
`;

exports[`BrevoContactNotifyPipe userDeleted should call deleteContact() 1`] = `
Array [
  "test@datasubvention.gouv.fr",
]
`;

exports[`BrevoContactNotifyPipe userUpdated should call updateContact() 1`] = `
Array [
  "test@datasubvention.gouv.fr",
  exports {
    "attributes": Object {
      "BUYER_PERSONNAE": "Gestionnaire administratif et financier,Chargé de mission / Expert métier",
      "CATEGORIE": "Agent public d’une collectivité territoriale",
      "COMPETENCE_TERRITORIALE": "Interdépartemental",
      "COMPTE_ACTIVE": true,
      "DERNIERE_CONNEXION": 2023-04-06T00:00:00.000Z,
      "ECHELON_COLLECTIVITE": "Départemental",
      "ECHELON_TERRITORIAL": "ECHELON_TERRITORIAL",
      "NOM": "NOM",
      "PRENOM": "PRENOM",
      "PROVENANCE": "Présentation Data.Subvention,Collègues ou hiérarchie,Autre",
      "PROVENANCE_AUTRE": "Autre raison",
      "PROVENANCE_EMAIL": "test@mail.com",
      "SERVICE": "SERVICE",
      "TELEPHONE": "+33625859685",
    },
    "listIds": Array [
      1,
    ],
  },
]
`;
